--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "lucide-react": "^0.514.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
